syntax = "proto3";

option go_package = "github.com/pepsighan/graftini_backend/internal/deploy/service";

package service;

// The deploy service definition.
service Deploy {
  rpc DeployProject(DeployRequest) returns (DeployReply) {}
  rpc CheckStatus(StatusRequest) returns (StatusReply) {}
}

message DeployRequest {
  bytes projectID = 1;
}

message DeployReply {
  bytes deploymentID = 1;
}

message StatusRequest {
  bytes deploymentID = 1;
}

message StatusReply {
  bytes deploymentID = 1;
}
